...
            }
        },
        actions = {
            IconButton(onClick = onShowHistory) {
                Icon(
                    painter = painterResource(R.drawable.ic_history),
                    contentDescription = "Open history",
                )
            }
        },
        colors = TopAppBarDefaults.centerAlignedTopAppBarColors(
            containerColor = MaterialTheme.colorScheme.surface,
        ),
...
